--- a/app/views/airports/index.html.erb
+++ b/app/views/airports/index.html.erb
@@ -8,7 +8,8 @@
     <tr>
      
       <th>name</th>
-      <th>flights</th>
+      <th>inbound flights</th>
+      <th>outbound flights</th>
 
       <th colspan="3"></th>
     </tr>
@@ -18,6 +19,8 @@
     <% @airports.each do |airport| %>
       <tr>
         <td><%= airport.name %></td>
+        <td><%= airport.inbound_flights.first %></td>
+        <td><%= airport.outbound_flights.first %></td>
 
 
 
