--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,26 +1,14 @@
 <h1>FORM</h1>
 From
-  <select name="departure_airport_id">
-  <% @airports.each do |airport|%>
-<option value=<%= airport.id%>><%=airport.name%></option>
-<% end %>
+  <%= select_tag(:departure_airport_id, options_for_select(@airport_options)) %>
 
-    </select>
+To       
+<%= select(:flight, :destination_airport_id, @airport_options) %>
 
-To     <select name="destination_airport_id">
-  <% @airports.each do |airport|%>
-<option value=<%= airport.id%>><%=airport.name%></option>
-<% end %>
-
-    </select>
 
 Date
-  <select name="flight_date">
-<option>month</option>
-<option>2mgosk</option>
-<option>gnun3</option>
+  <%= select_tag(:departure_time, options_for_select(@available_dates)) %>
 
-    </select>
 Number of Passengers
  <select name="passengers_number">
 <option>1</option>
