--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -50,7 +50,7 @@ Number of Passengers
     <br>
 
   <tbody>
-<%= form_with action: "bookings#new",method: "get" do |form|%>
+<%= form_with url: new_booking_url ,method: "get" do |form|%>
 
     <% found_flights.each do |flight| %>
 
