--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,3 +1,7 @@
-<h1>new booking page</h1>
+<h1>Your Booking</h1>
 
+<h2> <%= "#{@flight.airline} flight from #{@flight.departure_airport.name} to #{@flight.destination_airport.name}
+on #{@flight.flight_date} at #{@flight.departure_time}. Arrives at #{@flight.arrival_time}" %></h2>
+<div>
+        
 
