--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -5,3 +5,24 @@ on #{@flight.flight_date} at #{@flight.departure_time}. Arrives at #{@flight.arr
 <div>
         
 
+
+
+<h5>Contact details:</h5>
+
+<%= form_with model: @passenger do |form| %>
+  
+    <%= form.label :name, "Full name:" %>
+    <%= form.text_field :name %>
+<br>
+      
+    <%= form.label :email, "Email:" %>
+    <%= form.email_field :email %>
+<br>
+  
+    <%= form.label :name, "Phone number:" %>
+    <%= form.telephone_field :phone %>
+
+<br><br>
+    <%= form.submit "Confirm details"%>
+    <% end %>
+</div>
