add alert and notice element

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    
   <nav><br><br><%= link_to "Home", airports_url%>
 </nav>
     <%= yield %>
