edit form, successful booking creation

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -9,7 +9,8 @@ on #{@flight.flight_date} at #{@flight.departure_time}. Arrives at #{@flight.arr
 <h3>Contact details:</h3>
     <% i = 1%>
 
-        <%= form_with model: @passenger, url: bookings_path do |f| %>
+        <%= form_with model: @booking, url: bookings_path do |f| %>
+            <%= f.hidden_field :flight_id, value: @flight.id %>
 
             <% (params[:passengers_number]).to_i.times do %>
                 <%= f.fields_for @booking.passengers.build do |form| %>
