--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -8,30 +8,22 @@ on #{@flight.flight_date} at #{@flight.departure_time}. Arrives at #{@flight.arr
 
 <h3>Contact details:</h3>
 
-        <%= form_with model: @booking, url: bookings_path do |f| %>
-            <%= f.hidden_field :flight_id, value: @flight.id %>
+<%= form_with model: @booking, url: bookings_path do |f| %>
+  <%= f.hidden_field :flight_id, value: @flight.id %>
 
-            
+  <%= f.fields_for :passengers do |form| %>
 
-            <% @booking.passengers.each_with_index do |passenger, index| %>
-                <%= f.fields_for :passengers, passenger, index: index do |form| %>
+    <%= form.label :name, "Full name:" %>
+    <%= form.text_field :name %>
+<br>
+    <%= form.label :email, "Email:" %>
+    <%= form.email_field :email %>
+    <br><br>
+  <% end %>
 
-                <h4><%= "Passenger #{index+1}"%> <br> </h4>
-
-                    <%= form.label :name, "Full name:" %>
-                    <%= form.text_field :name %>
-                <br>
-                    
-                    <%= form.label :email, "Email:" %>
-                    <%= form.email_field :email %>
-        
-                <br><br>
-                <br>
-             <% end %>
-        <% end %>
-
-            <%= f.submit "Confirm details"%>
-        <% end %>
+  <%= f.submit "Confirm details"%>
+<% end %>
+       
 
 
 
