--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,18 +1,18 @@
 <h1>Your booking</h1>
 
 
-<h2>Booking code: <%= @booking.id %> </h2>
+<h2>Reservation code: <%= @booking.id %> </h2>
 
 <h2>Airline: <%= @booking.flight.airline %></h2>
-<h2>Destination: <%= @booking.flight.destination_airport%></h2>
-<h2>Origin: <%= @booking.flight.departure_airport%></h2>
+<h2>Destination: <%= @booking.flight.destination_airport.name%></h2>
+<h2>Origin: <%= @booking.flight.departure_airport.name%></h2>
 <h2>Date: <%=@booking.flight.flight_date%></h2>
 
-<% i = 1%>
-<h2>Passengers: <%=@booking.flight.passengers.size%></h2>
-<% while i <= @booking.flight.passengers.size %>
 
-<h2><%= "Passenger #{i}: #{@booking.passengers[i-1].name}"%></h2>
+<% i = 1%>
+<h2>Passengers: <%=@booking.passengers.size%></h2>
+<% while i <= @booking.passengers.size %>
+    <%= @booking.passengers[i-1].name%>
 <% i += 1%>
 <%end%>
 <h2></h2>
