add placeholder color scheme

--- a/app/assets/stylesheets/flights.scss
+++ b/app/assets/stylesheets/flights.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Flights controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+body {
+
+    color: rgb(160, 185, 231);
+    background-image: linear-gradient(to right, #3a3a3a, grey)
+
+}
