--- a/app/views/passenger_mailer/thanks_email.html.erb
+++ b/app/views/passenger_mailer/thanks_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to flight-booker.com, <%= @passenger.name %></h1>
+    <h1>Welcome to flights-on-rails.herokuapp.com, <%= @passenger.name %></h1>
     <p>
       You have successfully booked a flight,
       your booking id is: <%= @passenger.booking_id %>.<br>
@@ -12,6 +12,6 @@
     <p>
       To visit the site, just follow this link: <%= @url %>.
     </p>
-    <p>Thanks for choosing flight-booker.com and have a great day!</p>
+    <p>Thanks for choosing flights-on-rails.herokuapp.com and have a great day!</p>
   </body>
 </html>
