--- a/app/assets/stylesheets/flights.scss
+++ b/app/assets/stylesheets/flights.scss
@@ -9,3 +9,15 @@ body {
     background-image: linear-gradient(to right, #3a3a3a, grey)
 
 }
+
+a:link {
+
+    color: white;
+
+}
+
+
+a:visited {
+
+    color: rgb(220, 225, 248);
+}
